--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "easing-functions": "1.0.1",
     "native-base": "2.4.5",
     "react": "16.3.1",
     "react-native": "0.55.4",
